test/arrays/bradc/iterateOverArrayType.good
iterateOverArrayType.chpl:5: error: cannot iterate over type 'vec'
